rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Sat Oct  7 14:56:12 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER-USER - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i enp2s0 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -i enp2s0 -o enp5s0 -j ACCEPT
-A FORWARD -i enp2s0 -o tun0 -j ACCEPT
-A FORWARD -i enp5s0 -o enp2s0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i tun0 -o enp2s0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker_media -o enp2s0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A DOCKER-USER -m state --state RELATED,ESTABLISHED -j RETURN
-A DOCKER-USER -i enp5s0 -o docker_media -p tcp -m tcp --dport 6881 -j RETURN
-A DOCKER-USER -i enp5s0 -o docker_media -p udp -m udp --dport 6881 -j RETURN
-A DOCKER-USER -i enp5s0 -o docker_media -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Sat Oct  7 14:56:12 2023
# Generated by iptables-save v1.8.9 (nf_tables) on Sat Oct  7 14:56:12 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 192.168.88.0/24 -o enp5s0 -j MASQUERADE
-A POSTROUTING -s 192.168.88.0/24 -o tun0 -j MASQUERADE
COMMIT
# Completed on Sat Oct  7 14:56:12 2023
